Fixes menu alignment, some font sizes.

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,6 @@ header nav .menu-wrap {
   position: absolute;
   right: 0;
   top: 100%;
-  display: none;
 }
 
 header nav .menu-wrap .button:hover {
@@ -66,6 +65,7 @@ header nav .menu-wrap .button:hover {
 header nav .menu-wrap li {
   height: 5rem;
   margin-bottom: 0;
+  text-align: right;
 }
 
 header nav #menu-btn:hover + .menu-wrap {
@@ -75,7 +75,6 @@ header nav #menu-btn:hover + .menu-wrap {
 main, footer {
   background-color: #f4f6f7;
   position: relative;
-  top: 5rem;
 }
 
 main a:hover {
@@ -98,7 +97,7 @@ section {
 }
 
 .introduction p {
-  font-size: 1.7em;
+  font-size: 1.5em;
   margin-bottom: .5em;
 }
 
@@ -122,8 +121,7 @@ section {
 }
 
 .code .project {
-  padding-top: 3em;
-  padding-bottom: 3em;
+  padding: auto 1em;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
@@ -206,9 +204,9 @@ section {
 .code #flickrMap {
   background-color: #dedede;
   background-color: #a3ccff;
-  background-image: url("../img/flickrap-cover.png");
+  background-image: url("../img/flickrmap-cover.png");
   background-repeat: no-repeat;
-  background-position: 0 30px;
+  background-position: 0 0;
 }
 
 .code #flickrMap .button-primary {
@@ -217,6 +215,8 @@ section {
 }
 
 .advocacy {
+  margin: auto;
+  padding-top: 2em;
   height: calc(45em - 5rem);
 }
 
@@ -229,8 +229,13 @@ section {
   text-align: center;
 }
 
+.advocacy article {
+  margin-top: .5em;
+  margin-bottom: .5em;
+}
+
 .advocacy article h2 {
-  margin: 1.75em;
+  margin: auto 1.75em;
 }
 
 .advocacy article h3 {
@@ -244,12 +249,13 @@ section {
 }
 
 .contact {
+  padding-top: 2em;
   color: #3d3d3d;
   height: 20rem;
 }
 
-.contact info-wrap {
-  height: 100%;
+.contact .info-wrap {
+  height: auto;
 }
 
 .contact .row {
@@ -258,16 +264,18 @@ section {
 
 .contact .row h1, .contact .row p {
   display: inline-block;
+  font-size: 1.8em;
+  margin: 0 auto;
 }
 
 .contact .row p {
+  font-size: 1.5em;
   margin-left: .25em;
-  font-size: 3em;
 }
 
 .contact .row .sub-two {
   display: block;
-  font-size: 1.4em;
+  font-size: .9em;
 }
 
 footer {
@@ -391,11 +399,10 @@ footer .credits-wrap p, footer .credits-wrap ul {
   header nav .menu-wrap .button {
     display: inline-flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
   header nav .menu-wrap .button li {
     width: 105px;
+    align-items: center;
   }
   header #menu-btn {
     display: none !important;
